--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h1 class="header__title">Mampelajari cara belajar</h1>
                 <h2 class="header__subtitle">Cara belajar yang canggih dan paling efektif yang dapat diterapkan dalam kehidupan sehari-hari</h2>
                 <a class="header__link" href="#"> Pelajari selengkapnya </a>
-                <img class="header_main-illustrator" alt="Pemikir handal berdiri di puncak gunung membahas poin-poin penting dari sistem pendidikan modern, sambil juga
+                <img class="header__main-illustrator" alt="Pemikir handal berdiri di puncak gunung membahas poin-poin penting dari sistem pendidikan modern, sambil juga
                 bertanya-tanya dari mana kotak biru raksasa itu berasal." src="./images/header-image.png">
                 <div class="header__square"></div>
             </div>
