--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="page">
         <!-- Header and navigation -->
         <header class="header">
-            <img class="logo logo_place_header" src="./images/logo_place_header.png">
+            <img class="logo logo_place_header" alt="logo header" src="./images/logo_place_header.png">
             <div>
                 <h1 class="header__title">Mampelajari cara belajar</h1>
                 <h2 class="header__subtitle">Cara belajar yang canggih dan paling efektif yang dapat diterapkan dalam kehidupan sehari-hari</h2>
@@ -27,15 +27,17 @@
         <!-- Content page -->
         <main class="content">
             <section class="description">
-                <h2 class="two-columns__brief">Masalah utama pendidikan
-                </h2>
-                <div class="two-columns__main-text">
-                    <p class="two-columns__paragraph"> Baik di sekolah maupun universitas, satu hal yang tidak pernah diajarkan kepada Anda adalah cara mengajar diri sendiri. Umumnya, kita hanya menghafal materi tertentu dan melatih diri untuk mengikuti tes sehingga dapat lulus pada tes tersebut pada waktunya. Namun, setelah ujian dan tes selesai, informasi yang Anda hafalkan tersebut seakan tidak lagi berguna, dan karenanya, tidak ada jaminan bahwa Anda akan tetap ingat hal-hal yang telah dipelajari di sekolah. Pada akhirnya, kita hanya belajar bagaimana cara untuk lulus ujian.
-                    </p>
-                    <p class="two-columns__paragraph"> <span class="two-columns__span-accent"> Ini adalah pertanyaan sesungguhnya: </span>apakah dengan menghafal dan mengulang materi pelajaran, kita benar-benar dapat memahami inti materi yang kita pelajari? Menurut konsensus akademis terkini, jawabannya adalah tidak. Sebenarnya, alih-alih mempelajari suatu mata pelajaran, hal yang paling penting untuk dikuasai adalah cara belajar, namun sayangnya hal ini sering terabaikan. Jadi, apa yang bisa kita lakukan untuk memperbaiki hal ini?
-                    </p>
-                    <p class="two-columns__paragraph">Ada beberapa teknik dan latihan yang dapat Anda terapkan dalam proses pembelajaran agar prosesnya menjadi lebih efisien dan menarik. Terus gulir halaman ini untuk menemukan berbagai rahasia untuk belajar efektif.
-                    </p>
+                <div class="two-columns">
+                    <h2 class="two-columns__brief">Masalah utama pendidikan
+                    </h2>
+                    <div class="two-columns__main-text">
+                        <p class="two-columns__paragraph"> Baik di sekolah maupun universitas, satu hal yang tidak pernah diajarkan kepada Anda adalah cara mengajar diri sendiri. Umumnya, kita hanya menghafal materi tertentu dan melatih diri untuk mengikuti tes sehingga dapat lulus pada tes tersebut pada waktunya. Namun, setelah ujian dan tes selesai, informasi yang Anda hafalkan tersebut seakan tidak lagi berguna, dan karenanya, tidak ada jaminan bahwa Anda akan tetap ingat hal-hal yang telah dipelajari di sekolah. Pada akhirnya, kita hanya belajar bagaimana cara untuk lulus ujian.
+                        </p>
+                        <p class="two-columns__paragraph"> <span class="two-columns__span-accent"> Ini adalah pertanyaan sesungguhnya: </span>apakah dengan menghafal dan mengulang materi pelajaran, kita benar-benar dapat memahami inti materi yang kita pelajari? Menurut konsensus akademis terkini, jawabannya adalah tidak. Sebenarnya, alih-alih mempelajari suatu mata pelajaran, hal yang paling penting untuk dikuasai adalah cara belajar, namun sayangnya hal ini sering terabaikan. Jadi, apa yang bisa kita lakukan untuk memperbaiki hal ini?
+                        </p>
+                        <p class="two-columns__paragraph">Ada beberapa teknik dan latihan yang dapat Anda terapkan dalam proses pembelajaran agar prosesnya menjadi lebih efisien dan menarik. Terus gulir halaman ini untuk menemukan berbagai rahasia untuk belajar efektif.
+                        </p>
+                    </div>
                 </div>
             </section> 
 
@@ -142,7 +144,7 @@
         <footer class="footer">
             <div class="footer__columns">
                 <div class="footer__column footer__column_content_copyright">
-                    <img class="logo logo_place_footer" alt="" src="./images/logo_place_footer.png">
+                    <img class="logo logo_place_footer" alt="footer logo" src="./images/logo_place_footer.png">
                     <p class="footer__author footer__text" >© 2023 Yuza</p>
                 </div>
                 <div class="footer__column footer__column_content_about">
