--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./vendor/normalize.css">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Mempelajari cara belajar</title>
 </head>
@@ -19,10 +19,10 @@
                 <a class="header__link" href="#"> Pelajari selengkapnya </a>
                 <img class="header__main-illustrator" alt="Pemikir handal berdiri di puncak gunung membahas poin-poin penting dari sistem pendidikan modern, sambil juga
                 bertanya-tanya dari mana kotak biru raksasa itu berasal." src="./images/header-image.png">
-                <div class="header__square"></div>
+                <div class="header__square rotation"></div>
         </header>
-
-        <!-- Content page -->
+        
+        <!-- description section -->
         <main class="content">
             <section class="description">
                 <div class="two-columns">
@@ -39,7 +39,76 @@
                 </div>
             </section> 
 
-            <!-- Digits page -->
+        <!-- techniques section -->
+        <section class="techniques">
+            <h2 class="section-title">Teknik Pembelajaran</h2>
+            <h3 class="section-subtitle">Lima Strategi dari Barbara Oakley</h3>
+            <ul class="cards">
+                <li class="cards__item">
+                    <img class="cards__image" src="images/cards-attention.png" alt="cards-attention">
+                    <h4 class="cards__title">Dua Cara Berpikir</h4>
+                    <p class="cards__description">Pemahaman yang mendalam berasal dari kemampuan untuk beralih antara pemikiran yang terfokus dan pemikiran yang tersebar.</p>
+                </li>
+                <li class="cards__item">
+                    <img class="cards__image" src="images/cards-recall.png" alt="cards-recall">
+                    <h4 class="cards__title">Mengingat</h4>
+                    <p class="cards__description">Meningkatkan kemampuan Anda dalam mengingat informasi penting membantu Anda menghubungkan bagian otak yang berbeda.</p>
+                </li>
+                <li class="cards__item">
+                    <img class="cards__image" src="images/cards-interleaving.png" alt="cards-interleaving">
+                    <h4 class="cards__title">Mengikat</h4>
+                    <p class="cards__description">Ketika Anda mempelajari beberapa keterampilan secara bersamaan, masing-masing keterampilan yang Anda pelajari akan saling menguatkan satu sama lain.</p>
+                </li>
+                <li class="cards__item">
+                    <img class="cards__image" src="images/cards-question.png" alt="cards-question">
+                    <h4 class="cards__title">Bertanya</h4>
+                    <p class="cards__description">Saat menyimak pelajaran dari guru, temukan pertanyaan yang bagus, yaitu hal-hal yang ingin Anda ketahui lebih dalam.</p>
+                </li>
+                <li class="cards__item">
+                    <img class="cards__image" src="images/cards-competence.png" alt="cards-competence">
+                    <h4 class="cards__title">Ilusi Kompetensi</h4>
+                    <p class="cards__description">Uji diri sendiri, tuliskan hal yang Anda pelajari, ajarkan pada orang lain, dan ulangi hal tersebut saat Anda mempelajari hal baru. Hanya setelah Anda melakukannya, Anda dapat benar-benar yakin bahwa Anda telah memahami suatu hal.
+                    </p>
+                </li>
+            </ul>
+        </section>
+
+        <!-- video section -->
+        <section class="video">
+            <h2 class="section-title">Ceramah TED</h2>
+            <h3 class="section-subtitle">Bagi orang yang suka menunda</h3>
+            <div class="video__iframes">
+                <iframe id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
+                <iframe id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </section>
+
+        <!-- oakley section -->
+        <main class="content">
+            <section class="description">
+                <div class="two-columns">
+                    <h2 class="two-columns__brief">Kisah Barbara Oakley
+                    </h2>
+                    <div class="two-columns__main-text">
+                        <p class="two-columns__paragraph"> Saat masih kecil, Barbara sulit memahami matematika. Ia berpikir bahwa ia lebih menyukai ilmu humaniora meskipun ia tidak terlalu cerdas di bidang tersebut.
+                        Untuk mewujudkan cita-citanya menjadi ahli bahasa, setelah menamatkan sekolah, ia mendaftar sebagai tentara, kemudian ia dikirim untuk mempelajari bahasa Rusia. Setelah beberapa tahun bertugas dan meningkatkan karier hingga mencapai pangkat Kapten,  Barbara keluar dari dunia militer dan memutuskan untuk mempelajari teknik. Saat mempelajari teknik, ia mulai mengembangkan metodologi pembelajarannya karena ia dipaksa untuk memprogram ulang otaknya agar dapat menerima materi yang berbeda. Ternyata, saat kita tidak berbakat akan suatu hal, kerja keras kita dalam mempelajari hal yang mudah bagi orang lain tersebut akan membuat kita memahaminya dengan lebih mendalam dan komprehensif.
+                        </p>
+                    </div>
+                </div>
+            </section> 
+
+            <!-- Feyman section -->
+            <section class="feynman">
+                <h2 class="feynman__title">Teknik Feynman</h2>
+                <h3 class="feynman__subtitle">Balajar tanpa lupa</h3>
+                <a class="feynman__link" href="#"> Selengkapnya </a>
+                <img class="feynman__background-image" alt="Gambar Richard
+                Feynman, fisikawan kuantum terkenal di dunia. Teknik Feynman
+                berasal dari metode belajarnya ketika dia masih menjadi
+                mahasiswa di Princeton." src="./images/feynman.png">
+            </section>
+
+            <!-- Digits section -->
             <section class="digits">
                 <h2 class="section-title">Fakta dan angka</h2>
                 <h3 class="section-subtitle">Tentang belajar dan otak</h3>
@@ -79,16 +148,9 @@
                 </ul>
             </section>
 
-            <!-- Feyman page -->
-            <section class="feynman">
-                <h2 class="feynman__title">Teknik Feynman</h2>
-                <h3 class="feynman__subtitle">Balajar tanpa lupa</h3>
-                <a class="feynman__link" href="#"> Selengkapnya </a>
-                <img class="feynman__background-image" alt="Gambar Richard
-                Feynman, fisikawan kuantum terkenal di dunia. Teknik Feynman
-                berasal dari metode belajarnya ketika dia masih menjadi
-                mahasiswa di Princeton." src="./images/feynman.png">
-            </section>
+            <!-- khan section -->
+
+            <!-- kaufman section -->
             <section class="kaufman">
                 <h2 class="section-title">Sepuluh prinsip mendapatkan keterampilan dengan cepat</h2>
                 <h3 class="section-subtitle">oleh Josh Kaufman</h3>
@@ -136,6 +198,8 @@
                 </ul>
                 <img class="kaufman__triangle" alt="Segitiga biru besar yang diklaim sebagai milik Josh Kaufman" src="./images/kaufman-triangle.svg">
             </section>
+
+            <!-- resources section -->
 
             <!--  Footer & Contacts -->
         </main>
