--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <!-- oakley section -->
         <main class="content">
-            <section class="description">
+            <section class="oakley">
                 <div class="two-columns">
                     <h2 class="two-columns__brief">Kisah Barbara Oakley
                     </h2>
@@ -149,6 +149,18 @@
             </section>
 
             <!-- khan section -->
+            <section class="khan__container">
+                <h3 class="khan__author">Salman Khan</h3>
+                <h2 class="khan__title">The One World Schoolhouse</h2>
+                <p class="khan__quote">Semangat dan inovasi Sal Khan mengubah pembelajaran bagi jutaan siswa di seluruh dunia. The One World Schoolhouse adalah bacaan wajib bagi siapa pun yang berkomitmen untuk meningkatkan kualitas pendidikan dan menginginkan siswa di mana pun mendapatkan keterampilan dan pengetahuan yang diperlukan untuk sukses di sekolah, karier, dan kehidupan secara umum.</p>
+                <h4 class="khan__quote-author">George Lucas</h4>
+                <h5 class="khan__quote-author-subline">Pembuat Film</h5>
+                <div class="khan__book-container">
+                    <img class="khan__book-pic" alt="The One World Schoolhouse" src="images/khan-book-2.png">
+                    <h2 class="khan__buy-link">Comprar libro→</h2>
+                </div>
+
+            </section>
 
             <!-- kaufman section -->
             <section class="kaufman">
@@ -196,10 +208,20 @@
                         <p class="table__text">Tekankan fokus pada kecepatan dan kuantitas</p>
                     </li>
                 </ul>
-                <img class="kaufman__triangle" alt="Segitiga biru besar yang diklaim sebagai milik Josh Kaufman" src="./images/kaufman-triangle.svg">
+                <img class="kaufman__triangle rotation" alt="Segitiga biru besar yang diklaim sebagai milik Josh Kaufman" src="./images/kaufman-triangle.svg">
             </section>
 
             <!-- resources section -->
+            <section class="resources">
+                <h2 class="section-title">Sumber daya yang berguna</h2>
+                <h3 class="section-subtitle">Material lebih lanjut tentang teknik pembelajaran dan tip.</h3>
+                <div class="resources__logo-zone">
+                    <img class="resources__logo" href="#" alt="resources-tedED" src="images/logo/resources-tedED.png">
+                    <img class="resources__logo" href="#" alt="resources-Medium" src="images/logo/resources-Medium.png">
+                    <img class="resources__logo" href="#" alt="resources-dezeen" src="images/logo/resources-dezeen.png">
+                    <img class="resources__logo" href="#" alt="resources-goodreads" src="images/logo/resources-goodreads.png">
+                </div>
+            </section>
 
             <!--  Footer & Contacts -->
         </main>
