--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./vendor/normalize.css">
+    <link rel="stylesheet" href="./pages/index.css">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Mempelajari cara belajar</title>
 </head>
@@ -39,52 +40,51 @@
                 </div>
             </section> 
 
-        <!-- techniques section -->
-        <section class="techniques">
-            <h2 class="section-title">Teknik Pembelajaran</h2>
-            <h3 class="section-subtitle">Lima Strategi dari Barbara Oakley</h3>
-            <ul class="cards">
-                <li class="cards__item">
-                    <img class="cards__image" src="images/cards-attention.png" alt="cards-attention">
-                    <h4 class="cards__title">Dua Cara Berpikir</h4>
-                    <p class="cards__description">Pemahaman yang mendalam berasal dari kemampuan untuk beralih antara pemikiran yang terfokus dan pemikiran yang tersebar.</p>
-                </li>
-                <li class="cards__item">
-                    <img class="cards__image" src="images/cards-recall.png" alt="cards-recall">
-                    <h4 class="cards__title">Mengingat</h4>
-                    <p class="cards__description">Meningkatkan kemampuan Anda dalam mengingat informasi penting membantu Anda menghubungkan bagian otak yang berbeda.</p>
-                </li>
-                <li class="cards__item">
-                    <img class="cards__image" src="images/cards-interleaving.png" alt="cards-interleaving">
-                    <h4 class="cards__title">Mengikat</h4>
-                    <p class="cards__description">Ketika Anda mempelajari beberapa keterampilan secara bersamaan, masing-masing keterampilan yang Anda pelajari akan saling menguatkan satu sama lain.</p>
-                </li>
-                <li class="cards__item">
-                    <img class="cards__image" src="images/cards-question.png" alt="cards-question">
-                    <h4 class="cards__title">Bertanya</h4>
-                    <p class="cards__description">Saat menyimak pelajaran dari guru, temukan pertanyaan yang bagus, yaitu hal-hal yang ingin Anda ketahui lebih dalam.</p>
-                </li>
-                <li class="cards__item">
-                    <img class="cards__image" src="images/cards-competence.png" alt="cards-competence">
-                    <h4 class="cards__title">Ilusi Kompetensi</h4>
-                    <p class="cards__description">Uji diri sendiri, tuliskan hal yang Anda pelajari, ajarkan pada orang lain, dan ulangi hal tersebut saat Anda mempelajari hal baru. Hanya setelah Anda melakukannya, Anda dapat benar-benar yakin bahwa Anda telah memahami suatu hal.
-                    </p>
-                </li>
-            </ul>
-        </section>
+            <!-- techniques section -->
+            <section class="techniques">
+                <h2 class="section-title">Teknik Pembelajaran</h2>
+                <h3 class="section-subtitle">Lima Strategi dari Barbara Oakley</h3>
+                <ul class="cards">
+                    <li class="cards__item">
+                        <img class="cards__image" src="images/cards-attention.png" alt="cards-attention">
+                        <h4 class="cards__title">Dua Cara Berpikir</h4>
+                        <p class="cards__description">Pemahaman yang mendalam berasal dari kemampuan untuk beralih antara pemikiran yang terfokus dan pemikiran yang tersebar.</p>
+                    </li>
+                    <li class="cards__item">
+                        <img class="cards__image" src="images/cards-recall.png" alt="cards-recall">
+                        <h4 class="cards__title">Mengingat</h4>
+                        <p class="cards__description">Meningkatkan kemampuan Anda dalam mengingat informasi penting membantu Anda menghubungkan bagian otak yang berbeda.</p>
+                    </li>
+                    <li class="cards__item">
+                        <img class="cards__image" src="images/cards-interleaving.png" alt="cards-interleaving">
+                        <h4 class="cards__title">Mengikat</h4>
+                        <p class="cards__description">Ketika Anda mempelajari beberapa keterampilan secara bersamaan, masing-masing keterampilan yang Anda pelajari akan saling menguatkan satu sama lain.</p>
+                    </li>
+                    <li class="cards__item">
+                        <img class="cards__image" src="images/cards-question.png" alt="cards-question">
+                        <h4 class="cards__title">Bertanya</h4>
+                        <p class="cards__description">Saat menyimak pelajaran dari guru, temukan pertanyaan yang bagus, yaitu hal-hal yang ingin Anda ketahui lebih dalam.</p>
+                    </li>
+                    <li class="cards__item">
+                        <img class="cards__image" src="images/cards-competence.png" alt="cards-competence">
+                        <h4 class="cards__title">Ilusi Kompetensi</h4>
+                        <p class="cards__description">Uji diri sendiri, tuliskan hal yang Anda pelajari, ajarkan pada orang lain, dan ulangi hal tersebut saat Anda mempelajari hal baru. Hanya setelah Anda melakukannya, Anda dapat benar-benar yakin bahwa Anda telah memahami suatu hal.
+                        </p>
+                    </li>
+                </ul>
+            </section>
 
         <!-- video section -->
-        <section class="video">
-            <h2 class="section-title">Ceramah TED</h2>
-            <h3 class="section-subtitle">Bagi orang yang suka menunda</h3>
-            <div class="video__iframes">
-                <iframe id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
-                <iframe id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
-            </div>
-        </section>
+            <section class="video">
+                <h2 class="section-title">Ceramah TED</h2>
+                <h3 class="section-subtitle">Bagi orang yang suka menunda</h3>
+                <div class="video__iframes">
+                    <iframe id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
+                    <iframe id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </section>
 
-        <!-- oakley section -->
-        <main class="content">
+            <!-- oakley section -->
             <section class="oakley">
                 <div class="two-columns">
                     <h2 class="two-columns__brief">Kisah Barbara Oakley
@@ -222,9 +222,9 @@
                     <img class="resources__logo" href="#" alt="resources-goodreads" src="images/logo/resources-goodreads.png">
                 </div>
             </section>
-
-            <!--  Footer & Contacts -->
         </main>
+            <!--  Footer & Contacts -->
+        
         <footer class="footer">
             <div class="footer__columns">
                 <div class="footer__column footer__column_content_copyright">
