--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 <h2 class="section-title">Ceramah TED</h2>
                 <h3 class="section-subtitle">Bagi orang yang suka menunda</h3>
                 <div class="video__iframes">
-                    <iframe id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
-                    <iframe id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+                    <iframe  width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+                    <iframe  width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
                 </div>
             </section>
 
@@ -214,10 +214,10 @@
                 <h2 class="section-title">Sumber daya yang berguna</h2>
                 <h3 class="section-subtitle">Material lebih lanjut tentang teknik pembelajaran dan tip.</h3>
                 <div class="resources__logo-zone">
-                    <img class="resources__logo" href="#" alt="resources-tedED" src="images/logo/resources-tedED.png">
-                    <img class="resources__logo" href="#" alt="resources-Medium" src="images/logo/resources-Medium.png">
-                    <img class="resources__logo" href="#" alt="resources-dezeen" src="images/logo/resources-dezeen.png">
-                    <img class="resources__logo" href="#" alt="resources-goodreads" src="images/logo/resources-goodreads.png">
+                    <img class="resources__logo" alt="resources-tedED" src="images/logo/resources-tedED.png">
+                    <img class="resources__logo" alt="resources-Medium" src="images/logo/resources-Medium.png">
+                    <img class="resources__logo" alt="resources-dezeen" src="images/logo/resources-dezeen.png">
+                    <img class="resources__logo" alt="resources-goodreads" src="images/logo/resources-goodreads.png">
                 </div>
             </section>
         </main>
