--- a/index.html
+++ b/index.html
@@ -147,7 +147,17 @@
             </section>
 
             <!-- khan section -->
-            
+            <section class="khan__container">
+                <h3 class="khan__author">Salman Khan</h3>
+                <h2 class="khan__title">The One World Schoolhouse</h2>
+                <p class="khan__quote">Semangat dan inovasi Sal Khan mengubah pembelajaran bagi jutaan siswa di seluruh dunia. The One World Schoolhouse adalah bacaan wajib bagi siapa pun yang berkomitmen untuk meningkatkan kualitas pendidikan dan menginginkan siswa di mana pun mendapatkan keterampilan dan pengetahuan yang diperlukan untuk sukses di sekolah, karier, dan kehidupan secara umum.</p>
+                <a class="khan__quote-author">George Lucas</a>
+                <a class="khan__quote-author-subline">Pembuat Film</a>
+                <div class="khan__book-container">
+                    <img class="khan__book-pic" alt="The One World Schoolhouse" src="images/khan-book-2.png">
+                    <h2 class="khan__buy-link">Comprar libro→</h2>
+                </div>
+            </section>
 
             <!-- kaufman section -->
             <section class="kaufman">
