--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
             </section>
 
             <!-- khan section -->
+            <!-- maaf saya tidak bisa mengikuti hasil revisian karna ada masalah tidak bisa upload karna saya mengikuti intruksi pada platfom silahkan visit link berikut sebagai bukti -->
+            <!-- https://drive.google.com/file/d/1V8z4bCRxdqRnucntBJ_W-W_vM65sOjEi/view?usp=share_link -->
+
             <section class="container">
                 <h3 class="author">Salman Khan</h3>
                 <h2 class="title">The One World Schoolhouse</h2>
