--- a/index.html
+++ b/index.html
@@ -147,18 +147,15 @@
             </section>
 
             <!-- khan section -->
-            <!-- maaf saya tidak bisa mengikuti hasil revisian karna ada masalah tidak bisa upload karna saya mengikuti intruksi pada platfom silahkan visit link berikut sebagai bukti -->
-            <!-- https://drive.google.com/file/d/1V8z4bCRxdqRnucntBJ_W-W_vM65sOjEi/view?usp=share_link -->
-
-            <section class="container">
-                <h3 class="author">Salman Khan</h3>
-                <h2 class="title">The One World Schoolhouse</h2>
-                <p class="quote">Semangat dan inovasi Sal Khan mengubah pembelajaran bagi jutaan siswa di seluruh dunia. The One World Schoolhouse adalah bacaan wajib bagi siapa pun yang berkomitmen untuk meningkatkan kualitas pendidikan dan menginginkan siswa di mana pun mendapatkan keterampilan dan pengetahuan yang diperlukan untuk sukses di sekolah, karier, dan kehidupan secara umum.</p>
-                <a class="quote-author">George Lucas</a>
-                <a class="quote-author-subline">Pembuat Film</a>
-                <div class="book-container">
-                    <img class="book-pic" alt="The One World Schoolhouse" src="images/khan-book-2.png">
-                    <h2 class="buy-link">Comprar libro→</h2>
+            <section class="khan__container">
+                <h3 class="khan__author">Salman Khan</h3>
+                <h2 class="khan__title">The One World Schoolhouse</h2>
+                <p class="khan__quote">Semangat dan inovasi Sal Khan mengubah pembelajaran bagi jutaan siswa di seluruh dunia. The One World Schoolhouse adalah bacaan wajib bagi siapa pun yang berkomitmen untuk meningkatkan kualitas pendidikan dan menginginkan siswa di mana pun mendapatkan keterampilan dan pengetahuan yang diperlukan untuk sukses di sekolah, karier, dan kehidupan secara umum.</p>
+                <a class="khan__quote-author">George Lucas</a>
+                <a class="khan__quote-author-subline">Pembuat Film</a>
+                <div class="khan__book-container">
+                    <img class="khan__book-pic" alt="The One World Schoolhouse" src="images/khan-book-2.png">
+                    <h2 class="khan__buy-link">Comprar libro→</h2>
                 </div>
             </section>
 
