--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <a class="khan__quote-author-subline">Pembuat Film</a>
                 <div class="khan__book-container">
                     <img class="khan__book-pic" alt="The One World Schoolhouse" src="images/khan-book-2.png">
-                    <h2 class="khan__buy-link">Comprar libro→</h2>
+                    <a class="khan__buy-link" href="#">Comprar libro→</a>
                 </div>
             </section>
 
